// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Wizard component Check validity of sample component 1`] = `
[
  <View
    onLayout={[Function]}
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />,
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexDirection": "column",
        "minHeight": 240,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
            },
            {},
          ]
        }
      >
        <View
          accessibilityRole="header"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "zIndex": 20,
            }
          }
        >
          <View
            accessible={false}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderColor": "#999999",
                  "borderRadius": 18.5,
                  "borderWidth": 1,
                  "color": "#999999",
                  "height": 37,
                  "justifyContent": "center",
                  "width": 37,
                },
              ]
            }
            testID="test_wizard_step0"
          >
            <Text
              accessible={false}
              style={
                {
                  "color": "#999999",
                  "fontSize": 15,
                }
              }
              testID="test_wizard_step1_indicator"
            >
              1
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#eeeeee",
                "height": 2,
                "position": "absolute",
                "top": 17.5,
                "zIndex": 10,
              },
              {
                "left": "50%",
                "width": "50%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {},
          ]
        }
      >
        <View
          accessibilityRole="header"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "zIndex": 20,
            }
          }
        >
          <View
            accessible={false}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderColor": "#999999",
                  "borderRadius": 18.5,
                  "borderWidth": 1,
                  "color": "#999999",
                  "height": 37,
                  "justifyContent": "center",
                  "width": 37,
                },
              ]
            }
            testID="test_wizard_step1"
          >
            <Text
              accessible={false}
              style={
                {
                  "color": "#999999",
                  "fontSize": 15,
                }
              }
              testID="test_wizard_step2_indicator"
            >
              2
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#eeeeee",
                "height": 2,
                "position": "absolute",
                "top": 17.5,
                "zIndex": 10,
              },
              {
                "left": "0%",
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {},
          ]
        }
      >
        <View
          accessibilityRole="header"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "zIndex": 20,
            }
          }
        >
          <View
            accessible={false}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderColor": "#999999",
                  "borderRadius": 18.5,
                  "borderWidth": 1,
                  "color": "#999999",
                  "height": 37,
                  "justifyContent": "center",
                  "width": 37,
                },
              ]
            }
            testID="test_wizard_step2"
          >
            <Text
              accessible={false}
              style={
                {
                  "color": "#999999",
                  "fontSize": 15,
                }
              }
              testID="test_wizard_step3_indicator"
            >
              3
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#eeeeee",
                "height": 2,
                "position": "absolute",
                "top": 17.5,
                "zIndex": 10,
              },
              {
                "left": "0%",
                "width": "50%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "flex-start",
          "borderBottomWidth": 1,
          "borderColor": "#cccccc",
          "borderTopWidth": 1,
          "borderWidth": 0,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 12,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 12,
            "width": "100%",
          },
          {
            "flexDirection": "row-reverse",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        style={
          [
            {
              "alignSelf": "flex-start",
              "backgroundColor": "#ffffff",
              "borderColor": "#cccccc",
              "borderRadius": 32,
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginRight": 8,
              "minHeight": 46,
              "paddingBottom": 12,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 12,
              "rippleColor": "transparent",
            },
            {
              "flexDirection": "column",
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
            {},
          ]
        }
        testID="non_animatableView"
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "height": null,
                "justifyContent": "center",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
                "width": "100%",
              },
            ]
          }
          testID="test_wizard_cancelbtn_a"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              accessible={false}
              importantForAccessibility="no"
              style={
                {
                  "color": "#151420",
                  "fontFamily": "Roboto",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "textAlign": "center",
                  "textTransform": "capitalize",
                  "userSelect": "text",
                }
              }
              testID="test_wizard_cancelbtn_caption"
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`Test Wizard component render skeleton if showskeleton is true and showskeletonchildren is false 1`] = `
[
  <View
    onLayout={[Function]}
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />,
  <View
    onLayout={[Function]}
    style={
      {
        "backgroundColor": "#eeeeee",
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "display": "flex",
            "flexDirection": "column",
            "minHeight": 240,
          },
          {
            "opacity": 0,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
  </View>,
]
`;

exports[`Test Wizard component should align the actions to left 1`] = `
[
  <View
    onLayout={[Function]}
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />,
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexDirection": "column",
        "minHeight": 240,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
            },
            {},
          ]
        }
      >
        <View
          accessibilityRole="header"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "zIndex": 20,
            }
          }
        >
          <View
            accessible={false}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderColor": "#999999",
                  "borderRadius": 18.5,
                  "borderWidth": 1,
                  "color": "#999999",
                  "height": 37,
                  "justifyContent": "center",
                  "width": 37,
                },
              ]
            }
            testID="test_wizard_step0"
          >
            <Text
              accessible={false}
              style={
                {
                  "color": "#999999",
                  "fontSize": 15,
                }
              }
              testID="test_wizard_step1_indicator"
            >
              1
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#eeeeee",
                "height": 2,
                "position": "absolute",
                "top": 17.5,
                "zIndex": 10,
              },
              {
                "left": "50%",
                "width": "50%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {},
          ]
        }
      >
        <View
          accessibilityRole="header"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "zIndex": 20,
            }
          }
        >
          <View
            accessible={false}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderColor": "#999999",
                  "borderRadius": 18.5,
                  "borderWidth": 1,
                  "color": "#999999",
                  "height": 37,
                  "justifyContent": "center",
                  "width": 37,
                },
              ]
            }
            testID="test_wizard_step1"
          >
            <Text
              accessible={false}
              style={
                {
                  "color": "#999999",
                  "fontSize": 15,
                }
              }
              testID="test_wizard_step2_indicator"
            >
              2
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#eeeeee",
                "height": 2,
                "position": "absolute",
                "top": 17.5,
                "zIndex": 10,
              },
              {
                "left": "0%",
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {},
          ]
        }
      >
        <View
          accessibilityRole="header"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "zIndex": 20,
            }
          }
        >
          <View
            accessible={false}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderColor": "#999999",
                  "borderRadius": 18.5,
                  "borderWidth": 1,
                  "color": "#999999",
                  "height": 37,
                  "justifyContent": "center",
                  "width": 37,
                },
              ]
            }
            testID="test_wizard_step2"
          >
            <Text
              accessible={false}
              style={
                {
                  "color": "#999999",
                  "fontSize": 15,
                }
              }
              testID="test_wizard_step3_indicator"
            >
              3
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#eeeeee",
                "height": 2,
                "position": "absolute",
                "top": 17.5,
                "zIndex": 10,
              },
              {
                "left": "0%",
                "width": "50%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "flex-start",
          "borderBottomWidth": 1,
          "borderColor": "#cccccc",
          "borderTopWidth": 1,
          "borderWidth": 0,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 12,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 12,
            "width": "100%",
          },
          {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        style={
          [
            {
              "alignSelf": "flex-start",
              "backgroundColor": "#ffffff",
              "borderColor": "#cccccc",
              "borderRadius": 32,
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginRight": 8,
              "minHeight": 46,
              "paddingBottom": 12,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 12,
              "rippleColor": "transparent",
            },
            {
              "flexDirection": "column",
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
            {},
          ]
        }
        testID="non_animatableView"
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "height": null,
                "justifyContent": "center",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
                "width": "100%",
              },
            ]
          }
          testID="test_wizard_cancelbtn_a"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              accessible={false}
              importantForAccessibility="no"
              style={
                {
                  "color": "#151420",
                  "fontFamily": "Roboto",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "textAlign": "center",
                  "textTransform": "capitalize",
                  "userSelect": "text",
                }
              }
              testID="test_wizard_cancelbtn_caption"
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`Test Wizard component should render when defaultstep is none 1`] = `
[
  <View
    onLayout={[Function]}
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />,
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexDirection": "column",
        "minHeight": 240,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
            },
            {},
          ]
        }
      >
        <View
          accessibilityRole="header"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "zIndex": 20,
            }
          }
        >
          <View
            accessible={false}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderColor": "#999999",
                  "borderRadius": 18.5,
                  "borderWidth": 1,
                  "color": "#999999",
                  "height": 37,
                  "justifyContent": "center",
                  "width": 37,
                },
              ]
            }
            testID="test_wizard_step0"
          >
            <Text
              accessible={false}
              style={
                {
                  "color": "#999999",
                  "fontSize": 15,
                }
              }
              testID="test_wizard_step1_indicator"
            >
              1
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#eeeeee",
                "height": 2,
                "position": "absolute",
                "top": 17.5,
                "zIndex": 10,
              },
              {
                "left": "50%",
                "width": "50%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {},
          ]
        }
      >
        <View
          accessibilityRole="header"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "zIndex": 20,
            }
          }
        >
          <View
            accessible={false}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderColor": "#999999",
                  "borderRadius": 18.5,
                  "borderWidth": 1,
                  "color": "#999999",
                  "height": 37,
                  "justifyContent": "center",
                  "width": 37,
                },
              ]
            }
            testID="test_wizard_step1"
          >
            <Text
              accessible={false}
              style={
                {
                  "color": "#999999",
                  "fontSize": 15,
                }
              }
              testID="test_wizard_step2_indicator"
            >
              2
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#eeeeee",
                "height": 2,
                "position": "absolute",
                "top": 17.5,
                "zIndex": 10,
              },
              {
                "left": "0%",
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {},
          ]
        }
      >
        <View
          accessibilityRole="header"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "zIndex": 20,
            }
          }
        >
          <View
            accessible={false}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "borderColor": "#999999",
                  "borderRadius": 18.5,
                  "borderWidth": 1,
                  "color": "#999999",
                  "height": 37,
                  "justifyContent": "center",
                  "width": 37,
                },
              ]
            }
            testID="test_wizard_step2"
          >
            <Text
              accessible={false}
              style={
                {
                  "color": "#999999",
                  "fontSize": 15,
                }
              }
              testID="test_wizard_step3_indicator"
            >
              3
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#eeeeee",
                "height": 2,
                "position": "absolute",
                "top": 17.5,
                "zIndex": 10,
              },
              {
                "left": "0%",
                "width": "50%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "flex-start",
          "borderBottomWidth": 1,
          "borderColor": "#cccccc",
          "borderTopWidth": 1,
          "borderWidth": 0,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 12,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 12,
            "width": "100%",
          },
          {
            "flexDirection": "row-reverse",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          {
            "height": 0,
            "width": 0,
          }
        }
      />
      <View
        style={
          [
            {
              "alignSelf": "flex-start",
              "backgroundColor": "#ffffff",
              "borderColor": "#cccccc",
              "borderRadius": 32,
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginRight": 8,
              "minHeight": 46,
              "paddingBottom": 12,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 12,
              "rippleColor": "transparent",
            },
            {
              "flexDirection": "column",
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
            {},
          ]
        }
        testID="non_animatableView"
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "height": null,
                "justifyContent": "center",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
                "width": "100%",
              },
            ]
          }
          testID="test_wizard_cancelbtn_a"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              accessible={false}
              importantForAccessibility="no"
              style={
                {
                  "color": "#151420",
                  "fontFamily": "Roboto",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "textAlign": "center",
                  "textTransform": "capitalize",
                  "userSelect": "text",
                }
              }
              testID="test_wizard_cancelbtn_caption"
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;
